deletelocations
